Updates Kafka buffer configurations to disallow configurations which are not needed - schema and the serde_format for the topic configuration. As part of this change, I also split the TopicConfig into three distinct interfaces and classes. This allows each plugin to either accept a configuration or provide a value of the plugin's own choosing. Also adds copyright headers to all files modified as part of this commit.
Signed-off-by: David Venable <dlv@amazon.com>